--- a/app/app.css
+++ b/app/app.css
@@ -395,3 +395,38 @@ i {
 	justify-content: center;
 	width: 100%;
 }
+
+/* Skeleton */
+.skeleton {
+	background-color: #dddbdd;
+	border-radius: 4px;
+	display: inline-block;
+	height: 40px;
+	overflow: hidden;
+	position: relative;
+	width: 100%;
+}
+
+.skeleton::after {
+	animation: shimmer 5s infinite;
+	background-image: linear-gradient(
+		90deg,
+		rgba(#fff, 0) 0,
+		rgba(#fff, 0.2) 20%,
+		rgba(#fff, 0.5) 60%,
+		rgba(#fff, 0)
+	);
+	content: '';
+	bottom: 0;
+	left: 0;
+	position: absolute;
+	right: 0;
+	top: 0;
+	transform: translateX(-100%);
+}
+
+@keyframes shimmer {
+	100% {
+		transform: translateX(100%);
+	}
+}
